manifests/static-sites/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: static-sites
spec:
  ports:
    - port: 80
      targetPort: 8000
  selector:
    app: static-sites
